// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /cymrufyw/erthyglau/c06p32z9x2mo For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="cy"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Dyma bennawd SEO yr erthygl brawf yma"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Dyma bennawd SEO yr erthygl brawf yma"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="cy"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Dyma bennawd SEO yr erthygl brawf yma - BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@BBCCymruFyw"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Dyma bennawd SEO yr erthygl brawf yma"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@BBCCymruFyw"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Dyma bennawd SEO yr erthygl brawf yma - BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-10-11T14:48:52.046Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-13T12:47:29.359Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <link rel="preconnect"
          href="https://gel.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://gel.files.bbci.co.uk"
    >
    <link rel="preconnect"
          href="https://ws-downloads.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ws-downloads.files.bbci.co.uk"
    >
    <title data-react-helmet="true">
      Dyma bennawd SEO yr erthygl brawf yma - BBC Cymru Fyw
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/cymrufyw/articles/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/cymrufyw/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            async
            custom-element="amp-bind"
            src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    >
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo","publisher":{"@type":"NewsMediaOrganization","name":"BBC Cymru Fyw","publishingPrinciples":"https://www.bbc.com/news/help-41670342","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"},"thumbnailUrl":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo","name":"Dyma bennawd SEO yr erthygl brawf yma"},"headline":"Dyma bennawd SEO yr erthygl brawf yma","datePublished":"2019-07-13T12:47:29.359Z","dateModified":"2019-10-11T14:48:52.046Z","author":{"@type":"NewsMediaOrganization","name":"BBC Cymru Fyw","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"},"noBylinesPolicy":"https://www.bbc.com/news/help-41670342#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/c06p32z9x2mo/p01k6msp/cy/amp"}
    </script>
    <script data-react-helmet="true"
            async
            custom-element="amp-iframe"
            src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    >
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 gIWVBy"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Rydyn ni wedi diweddaru ein Polisi Preifatrwydd a Chwcis
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 kOYkDy"
                  >
                    Rydyn ni wedi gwneud newidiadau pwysig i'n Polisi Preifatrwydd a Chwcis ac rydyn ni eisiau i chi wybod beth all hyn ei olygu i chi a'ch data.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iZFJYN"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        Iawn
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters/cy"
                         on="tap:cookie.show, privacy.hide"
                      >
                        Beth sydd wedi newid
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 gIWVBy"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Rhowch wybod eich bod yn cytuno i'r cwcis
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 kOYkDy"
                  >
                    Rydyn ni'n defnyddio
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/cy/">
                      cwcis
                    </a>
                    i roi'r profiad ar-lein gorau posib i chi. Gadewch i ni wybod os ydych chi'n cytuno i'r cwcis yma
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 iZFJYN"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        Cytuno
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/cy/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        Na, mynd i'r gosodiadau
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/cymrufyw"
               class="StyledLink-m3awbo-2 jvOoGC"
            >
              <svg height="24"
                   viewbox="0 0 199 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 bJeQfP"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M44.322 15.73c.006-1.994-1.316-3.509-3.423-4.092.567-.292 1.016-.65 1.35-1.086.443-.586.65-1.302.65-2.14a3.833 3.833 0 00-1.262-2.858c-.866-.783-2.175-1.292-3.958-1.292H32.74v15.796h5.8c2.068 0 3.517-.564 4.449-1.395a3.934 3.934 0 001.334-2.932zm-17.654 7.39h23.154V1.185H26.668V23.12z">
                  </path>
                  <path d="M41.44 15.41c0 .527-.16 1.049-.63 1.461-.461.41-1.26.722-2.586.722h-2.67V13.28h2.555c1.186 0 2.026.244 2.56.624.528.382.764.882.772 1.507m-2.165-5.16c.496-.36.74-.867.74-1.633 0-.528-.15-.978-.527-1.312-.372-.337-1.014-.576-2.05-.576h-1.886v4.086h1.297c1.123 0 1.925-.203 2.426-.564m-21.627 5.48c.006-1.995-1.31-3.51-3.423-4.093.573-.292 1.022-.65 1.348-1.086.444-.586.648-1.302.648-2.14a3.834 3.834 0 00-1.258-2.858c-.86-.783-2.167-1.292-3.952-1.292H6.075v15.796h5.792c2.065 0 3.514-.564 4.445-1.395a3.911 3.911 0 001.337-2.932zM0 23.12h23.145V1.185H.001V23.12z">
                  </path>
                  <path d="M12.604 10.25c.5-.36.738-.867.743-1.633 0-.528-.153-.978-.525-1.312-.38-.337-1.02-.576-2.05-.576H8.885v4.086h1.297c1.117 0 1.925-.203 2.421-.564m1.392 3.652c-.527-.38-1.373-.624-2.562-.624H8.886v4.314h2.665c1.328 0 2.13-.311 2.593-.722.461-.412.623-.934.623-1.46-.006-.626-.24-1.126-.771-1.508m57.894 1.928l-.373.228c-1.782 1.1-3.736 1.693-5.506 1.693-3.79-.014-6.292-2.273-6.304-5.57.012-3.221 2.62-5.603 6.2-5.612 1.838.002 3.493.479 5.458 1.563l.36.2V5.394l-.156-.059c-2.223-.883-3.942-1.277-5.636-1.277-2.617 0-4.903.873-6.522 2.353-1.616 1.485-2.581 3.574-2.581 5.976 0 1.672.68 3.635 2.157 5.189 1.464 1.556 3.713 2.688 6.806 2.688h.015c2.564 0 4.338-.573 5.942-1.372l.14-.065v-2.996zm-18.553 7.29h23.151V1.184h-23.15V23.12zM96.733 8.82c-.57-.263-1.186-.454-2.159-.454-1.974 0-3.233 1.58-3.233 3.9 0 2.273 1.07 4.02 3.301 4.02.905 0 1.902-.337 2.451-.576l.141 2.654c-.926.287-1.877.407-3.185.407-4.013 0-6.032-2.75-6.032-6.505 0-3.565 2.09-6.387 5.914-6.387 1.284 0 2.208.144 3.088.406l-.286 2.535zm8.17 6.34h.048l2.947-8.994h3.232l-4.587 12.223c-1.02 2.727-1.759 5.405-5.084 5.405-.76 0-1.518-.12-2.257-.335l.214-2.367c.405.143.857.215 1.642.215 1.28 0 2.067-.884 2.067-2.2l-4.683-12.94h3.517l2.945 8.992zm8.078-8.994h2.969V7.89h.047c.998-1.507 2.447-2.01 3.636-2.01 1.708 0 2.92.646 3.609 2.176.736-1.482 2.329-2.176 3.823-2.176 3.019 0 3.872 2.082 3.872 4.831v7.775h-3.181v-7.342c0-1.15 0-2.776-1.831-2.776-2.113 0-2.372 2.536-2.372 4.137v5.981h-3.184v-7.342c0-1.15 0-2.776-1.829-2.776-2.116 0-2.376 2.536-2.376 4.137v5.981h-3.183V6.166zm20.528 0h2.828v2.799h.047c.142-1.149 1.448-3.086 3.35-3.086.308 0 .639 0 .974.096v3.228c-.288-.167-.857-.263-1.427-.263-2.59 0-2.59 3.255-2.59 5.023v4.522h-3.182V6.166zm20.5 12.319h-3.015V16.81h-.049c-.973 1.196-2.352 1.96-4.014 1.96-2.898 0-4.156-2.056-4.156-4.83V6.166h3.185v6.577c0 1.508.02 3.542 2.064 3.542 2.305 0 2.802-2.511 2.802-4.09v-6.03h3.183v12.32zm8.037-10.99h-2.467V6.193h2.467V5.3c0-2.58.096-5.184 3.232-5.184.48 0 1.127.073 1.414.24l-.096 1.327c-.312-.169-.767-.265-1.199-.265-2.058 0-1.842 2.243-1.842 3.714v1.06h2.754v1.303h-2.754v10.997h-1.51V7.495zm11.3 12.828c-.575 1.69-1.437 3.377-3.138 3.377-.55 0-1.125-.072-1.627-.193l.143-1.303c.287.097.575.193 1.124.193 1.294 0 1.726-1.084 2.205-2.678l.31-1.084-4.334-12.442h1.653l3.424 10.271-.024-.022h.047l3.52-10.25h1.582l-4.885 14.13zm20.804-1.831h-1.819l-3.328-10.635-3.377 10.635h-1.82l-3.928-12.3h1.652l3.21 10.634 3.448-10.634h1.82l3.233 10.634 3.425-10.634h1.508z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Cymru Fyw
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 bbZqWC"
            >
              Neidio i'r cynnwys
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             id="si-nav"
             class="StyledNav-sc-158x7z5-5 jTxPjl"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <amp-state id="menuState">
              <script type="application/json">
                {"expanded":false}
              </script>
            </amp-state>
            <button type="button"
                    aria-expanded="false"
                    data-amp-bind-aria-expanded="menuState.expanded ? &quot;true&quot; : &quot;false&quot;"
                    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
                    dir="ltr"
                    class="MenuButton-ukxuly-6 dGlJrg"
            >
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   data-amp-bind-hidden="menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                </path>
              </svg>
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   hidden
                   data-amp-bind-hidden="!menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                >
                </path>
              </svg>
              <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                Adrannau
              </span>
            </button>
            <div id="si-nav-dropdown-menu"
                 hidden
                 class="AmpDropdown-ukxuly-1 dMLYwY"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Hafan
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/cylchgrawn"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Cylchgrawn
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/gwleidyddiaeth"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Gwleidyddiaeth
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/gogledd-orllewin"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Gog-Orll
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/gogledd-ddwyrain"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Gog-Ddwy
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/canolbarth"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Canolbarth
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/de-orllewin"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    De-Orll
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/de-ddwyrain"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    De-Ddwy
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/news/wales"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Wales News
                  </a>
                </li>
              </ul>
            </div>
            <div dir="ltr"
                 id="si-nav-scrollable"
                 class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz StyledAmpScrollableNavigation-thcau0-0 eHufvQ"
            >
              <ul role="list"
                  class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              >
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Hafan
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/cylchgrawn"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Cylchgrawn
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/gwleidyddiaeth"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Gwleidyddiaeth
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/gogledd-orllewin"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Gog-Orll
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/gogledd-ddwyrain"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Gog-Ddwy
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/canolbarth"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Canolbarth
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/de-orllewin"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    De-Orll
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/cymrufyw/de-ddwyrain"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    De-Ddwy
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/news/wales"
                     class="StyledLink-sc-158x7z5-2 bIwJBN"
                  >
                    Wales News
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598292&s2=100&p=cymrufyw.articles.c06p32z9x2mo.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:optimo:c06p32z9x2mo]&x2=[amp]&x3=[news-cymrufyw]&x4=[cy]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[Dyma+bennawd+SEO+yr+erthygl+brawf+yma]&x11=[2019-07-13T12:47:29.359Z]&x12=[2019-10-11T14:48:52.046Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Cymrufyw, Cymrufyw - ART","uid":50924,"title":"Dyma bennawd SEO yr erthygl brawf yma","virtualReferrer":"\${documentReferrer}","contentType":"New Article"}}
        </script>
      </amp-analytics>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 kAojgD"
            >
              Dyma bennawd yr erthygl brawf yma
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Map o Ffrainc yn dangos Paris a Cognac"
                             attribution
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg"
                             height="351"
                             width="624"
                    >
                    </amp-img>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 kzTJkj">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Disgrifiad o'r llun,
                    </span>
                    <p>
                      Mae’r llun prawf hwn, hawlfraint BBC, yn dangos map o Ffrainc. Mae’r llun o fewn y tri blwch cyntaf, gyda’r pennawd yma.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-13"
                  class="StyledTimestamp-um718p-0 kSGFFg"
            >
              13 Gorffennaf 2019
            </time>
            <div>
              <time datetime="2019-10-11"
                    class="StyledTimestamp-um718p-0 kSGFFg"
              >
                Wedi ei ddiweddaru 11 Hydref 2019
              </time>
            </div>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 dSVJxu">
              Dyma flwch prawf, sy’n cynnwys dolen url i dudalen
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                dywydd y BBC
              </a>
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <amp-iframe sandbox="allow-scripts allow-same-origin"
                            layout="fill"
                            scrolling="no"
                            frameborder="0"
                            src="https://polling.test.bbc.co.uk/ws/av-embeds/articles/c06p32z9x2mo/p01k6msp/cy/amp"
                            title="Media player"
                            allowfullscreen="allowfullscreen"
                >
                  <amp-img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                           layout="fill"
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                           placeholder="true"
                           alt
                           height="16"
                           width="9"
                           attribution
                  >
                  </amp-img>
                  <noscript>
                    <div class="StyledWrapper-sc-1pnftlt-0 jywlaE">
                      <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                           alt
                           src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                           aria-hidden="true"
                           class="StyledImg-sc-7vx2mr-0 hIxkbt"
                      >
                      <div class="MessageWrapper-sc-1pnftlt-1 dHbulA">
                        <strong class="StyledMessage-sc-1pnftlt-2 iRlUPR">
                          To play this content, please enable JavaScript, or try a different browser
                        </strong>
                      </div>
                    </div>
                  </noscript>
                </amp-iframe>
              </div>
              <figcaption class="Caption-sc-16x70so-0 kzTJkj">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Disgrifiad o'r fideo,
                </span>
                <p>
                  Dyma flwch fideo sy’n cynnwys fideo am forgrug
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Dyma-flwch-ar-gyfer-isbennawd"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 nSlOl"
            >
              Dyma flwch ar gyfer is-bennawd
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <amp-img alt="Pêl-droedwyr ar ôl y gêm"
                             attribution="Getty Images"
                             layout="responsive"
                             src="https://ichef.bbci.co.uk/news/640/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg"
                             height="1152"
                             width="2048"
                    >
                    </amp-img>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Ffynhonnell y llun,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 dSVJxu">
              Mae’r erthygl brawf yma wedi ei chreu er mwyn cynnal profion ar y wefan drwyddi draw
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/cymrufyw"
               class="StyledLink-m3awbo-2 jvOoGC"
            >
              <svg height="24"
                   viewbox="0 0 199 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 bJeQfP"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M44.322 15.73c.006-1.994-1.316-3.509-3.423-4.092.567-.292 1.016-.65 1.35-1.086.443-.586.65-1.302.65-2.14a3.833 3.833 0 00-1.262-2.858c-.866-.783-2.175-1.292-3.958-1.292H32.74v15.796h5.8c2.068 0 3.517-.564 4.449-1.395a3.934 3.934 0 001.334-2.932zm-17.654 7.39h23.154V1.185H26.668V23.12z">
                  </path>
                  <path d="M41.44 15.41c0 .527-.16 1.049-.63 1.461-.461.41-1.26.722-2.586.722h-2.67V13.28h2.555c1.186 0 2.026.244 2.56.624.528.382.764.882.772 1.507m-2.165-5.16c.496-.36.74-.867.74-1.633 0-.528-.15-.978-.527-1.312-.372-.337-1.014-.576-2.05-.576h-1.886v4.086h1.297c1.123 0 1.925-.203 2.426-.564m-21.627 5.48c.006-1.995-1.31-3.51-3.423-4.093.573-.292 1.022-.65 1.348-1.086.444-.586.648-1.302.648-2.14a3.834 3.834 0 00-1.258-2.858c-.86-.783-2.167-1.292-3.952-1.292H6.075v15.796h5.792c2.065 0 3.514-.564 4.445-1.395a3.911 3.911 0 001.337-2.932zM0 23.12h23.145V1.185H.001V23.12z">
                  </path>
                  <path d="M12.604 10.25c.5-.36.738-.867.743-1.633 0-.528-.153-.978-.525-1.312-.38-.337-1.02-.576-2.05-.576H8.885v4.086h1.297c1.117 0 1.925-.203 2.421-.564m1.392 3.652c-.527-.38-1.373-.624-2.562-.624H8.886v4.314h2.665c1.328 0 2.13-.311 2.593-.722.461-.412.623-.934.623-1.46-.006-.626-.24-1.126-.771-1.508m57.894 1.928l-.373.228c-1.782 1.1-3.736 1.693-5.506 1.693-3.79-.014-6.292-2.273-6.304-5.57.012-3.221 2.62-5.603 6.2-5.612 1.838.002 3.493.479 5.458 1.563l.36.2V5.394l-.156-.059c-2.223-.883-3.942-1.277-5.636-1.277-2.617 0-4.903.873-6.522 2.353-1.616 1.485-2.581 3.574-2.581 5.976 0 1.672.68 3.635 2.157 5.189 1.464 1.556 3.713 2.688 6.806 2.688h.015c2.564 0 4.338-.573 5.942-1.372l.14-.065v-2.996zm-18.553 7.29h23.151V1.184h-23.15V23.12zM96.733 8.82c-.57-.263-1.186-.454-2.159-.454-1.974 0-3.233 1.58-3.233 3.9 0 2.273 1.07 4.02 3.301 4.02.905 0 1.902-.337 2.451-.576l.141 2.654c-.926.287-1.877.407-3.185.407-4.013 0-6.032-2.75-6.032-6.505 0-3.565 2.09-6.387 5.914-6.387 1.284 0 2.208.144 3.088.406l-.286 2.535zm8.17 6.34h.048l2.947-8.994h3.232l-4.587 12.223c-1.02 2.727-1.759 5.405-5.084 5.405-.76 0-1.518-.12-2.257-.335l.214-2.367c.405.143.857.215 1.642.215 1.28 0 2.067-.884 2.067-2.2l-4.683-12.94h3.517l2.945 8.992zm8.078-8.994h2.969V7.89h.047c.998-1.507 2.447-2.01 3.636-2.01 1.708 0 2.92.646 3.609 2.176.736-1.482 2.329-2.176 3.823-2.176 3.019 0 3.872 2.082 3.872 4.831v7.775h-3.181v-7.342c0-1.15 0-2.776-1.831-2.776-2.113 0-2.372 2.536-2.372 4.137v5.981h-3.184v-7.342c0-1.15 0-2.776-1.829-2.776-2.116 0-2.376 2.536-2.376 4.137v5.981h-3.183V6.166zm20.528 0h2.828v2.799h.047c.142-1.149 1.448-3.086 3.35-3.086.308 0 .639 0 .974.096v3.228c-.288-.167-.857-.263-1.427-.263-2.59 0-2.59 3.255-2.59 5.023v4.522h-3.182V6.166zm20.5 12.319h-3.015V16.81h-.049c-.973 1.196-2.352 1.96-4.014 1.96-2.898 0-4.156-2.056-4.156-4.83V6.166h3.185v6.577c0 1.508.02 3.542 2.064 3.542 2.305 0 2.802-2.511 2.802-4.09v-6.03h3.183v12.32zm8.037-10.99h-2.467V6.193h2.467V5.3c0-2.58.096-5.184 3.232-5.184.48 0 1.127.073 1.414.24l-.096 1.327c-.312-.169-.767-.265-1.199-.265-2.058 0-1.842 2.243-1.842 3.714v1.06h2.754v1.303h-2.754v10.997h-1.51V7.495zm11.3 12.828c-.575 1.69-1.437 3.377-3.138 3.377-.55 0-1.125-.072-1.627-.193l.143-1.303c.287.097.575.193 1.124.193 1.294 0 1.726-1.084 2.205-2.678l.31-1.084-4.334-12.442h1.653l3.424 10.271-.024-.022h.047l3.52-10.25h1.582l-4.885 14.13zm20.804-1.831h-1.819l-3.328-10.635-3.377 10.635h-1.82l-3.928-12.3h1.652l3.21 10.634 3.448-10.634h1.82l3.233 10.634 3.425-10.634h1.508z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Cymru Fyw
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 iGoLNb">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 bmlrLC"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/news/help-41670342"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Pam y gallwch ymddiried yn BBC Cymru Fyw
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/terms/cy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Telerau Defnyddio
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/privacy/cy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Polisi Preifatrwydd
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/cy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cwcis
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/contact/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cysylltwch â'r BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. Nid yw'r BBC yn gyfrifol am gynnwys safleoedd allanol.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Sut ry'n ni'n defnyddio dolenni allanol.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /cymrufyw/erthyglau/c06p32z9x2mo For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="cy"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Dyma bennawd SEO yr erthygl brawf yma"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Dyma bennawd SEO yr erthygl brawf yma"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="cy"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Dyma bennawd SEO yr erthygl brawf yma - BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@BBCCymruFyw"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Dyma bennawd SEO yr erthygl brawf yma"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@BBCCymruFyw"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Dyma bennawd SEO yr erthygl brawf yma - BBC Cymru Fyw"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-10-11T14:48:52.046Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-13T12:47:29.359Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <link rel="preconnect"
          href="https://gel.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://gel.files.bbci.co.uk"
    >
    <link rel="preconnect"
          href="https://ws-downloads.files.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ws-downloads.files.bbci.co.uk"
    >
    <title data-react-helmet="true">
      Dyma bennawd SEO yr erthygl brawf yma - BBC Cymru Fyw
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/cymrufyw/articles/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/cymrufyw/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/cymrufyw/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo","publisher":{"@type":"NewsMediaOrganization","name":"BBC Cymru Fyw","publishingPrinciples":"https://www.bbc.com/news/help-41670342","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"},"thumbnailUrl":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/cymrufyw/erthyglau/c06p32z9x2mo","name":"Dyma bennawd SEO yr erthygl brawf yma"},"headline":"Dyma bennawd SEO yr erthygl brawf yma","datePublished":"2019-07-13T12:47:29.359Z","dateModified":"2019-10-11T14:48:52.046Z","author":{"@type":"NewsMediaOrganization","name":"BBC Cymru Fyw","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://www.bbc.co.uk/news/special/2015/newsspec_11063/cymru_fyw_1024x576.png"},"noBylinesPolicy":"https://www.bbc.com/news/help-41670342#authorexpertise"}}
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/articles/c06p32z9x2mo/p01k6msp/cy"}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/cymrufyw"
               class="StyledLink-m3awbo-2 jvOoGC"
            >
              <svg height="24"
                   viewbox="0 0 199 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 bJeQfP"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M44.322 15.73c.006-1.994-1.316-3.509-3.423-4.092.567-.292 1.016-.65 1.35-1.086.443-.586.65-1.302.65-2.14a3.833 3.833 0 00-1.262-2.858c-.866-.783-2.175-1.292-3.958-1.292H32.74v15.796h5.8c2.068 0 3.517-.564 4.449-1.395a3.934 3.934 0 001.334-2.932zm-17.654 7.39h23.154V1.185H26.668V23.12z">
                  </path>
                  <path d="M41.44 15.41c0 .527-.16 1.049-.63 1.461-.461.41-1.26.722-2.586.722h-2.67V13.28h2.555c1.186 0 2.026.244 2.56.624.528.382.764.882.772 1.507m-2.165-5.16c.496-.36.74-.867.74-1.633 0-.528-.15-.978-.527-1.312-.372-.337-1.014-.576-2.05-.576h-1.886v4.086h1.297c1.123 0 1.925-.203 2.426-.564m-21.627 5.48c.006-1.995-1.31-3.51-3.423-4.093.573-.292 1.022-.65 1.348-1.086.444-.586.648-1.302.648-2.14a3.834 3.834 0 00-1.258-2.858c-.86-.783-2.167-1.292-3.952-1.292H6.075v15.796h5.792c2.065 0 3.514-.564 4.445-1.395a3.911 3.911 0 001.337-2.932zM0 23.12h23.145V1.185H.001V23.12z">
                  </path>
                  <path d="M12.604 10.25c.5-.36.738-.867.743-1.633 0-.528-.153-.978-.525-1.312-.38-.337-1.02-.576-2.05-.576H8.885v4.086h1.297c1.117 0 1.925-.203 2.421-.564m1.392 3.652c-.527-.38-1.373-.624-2.562-.624H8.886v4.314h2.665c1.328 0 2.13-.311 2.593-.722.461-.412.623-.934.623-1.46-.006-.626-.24-1.126-.771-1.508m57.894 1.928l-.373.228c-1.782 1.1-3.736 1.693-5.506 1.693-3.79-.014-6.292-2.273-6.304-5.57.012-3.221 2.62-5.603 6.2-5.612 1.838.002 3.493.479 5.458 1.563l.36.2V5.394l-.156-.059c-2.223-.883-3.942-1.277-5.636-1.277-2.617 0-4.903.873-6.522 2.353-1.616 1.485-2.581 3.574-2.581 5.976 0 1.672.68 3.635 2.157 5.189 1.464 1.556 3.713 2.688 6.806 2.688h.015c2.564 0 4.338-.573 5.942-1.372l.14-.065v-2.996zm-18.553 7.29h23.151V1.184h-23.15V23.12zM96.733 8.82c-.57-.263-1.186-.454-2.159-.454-1.974 0-3.233 1.58-3.233 3.9 0 2.273 1.07 4.02 3.301 4.02.905 0 1.902-.337 2.451-.576l.141 2.654c-.926.287-1.877.407-3.185.407-4.013 0-6.032-2.75-6.032-6.505 0-3.565 2.09-6.387 5.914-6.387 1.284 0 2.208.144 3.088.406l-.286 2.535zm8.17 6.34h.048l2.947-8.994h3.232l-4.587 12.223c-1.02 2.727-1.759 5.405-5.084 5.405-.76 0-1.518-.12-2.257-.335l.214-2.367c.405.143.857.215 1.642.215 1.28 0 2.067-.884 2.067-2.2l-4.683-12.94h3.517l2.945 8.992zm8.078-8.994h2.969V7.89h.047c.998-1.507 2.447-2.01 3.636-2.01 1.708 0 2.92.646 3.609 2.176.736-1.482 2.329-2.176 3.823-2.176 3.019 0 3.872 2.082 3.872 4.831v7.775h-3.181v-7.342c0-1.15 0-2.776-1.831-2.776-2.113 0-2.372 2.536-2.372 4.137v5.981h-3.184v-7.342c0-1.15 0-2.776-1.829-2.776-2.116 0-2.376 2.536-2.376 4.137v5.981h-3.183V6.166zm20.528 0h2.828v2.799h.047c.142-1.149 1.448-3.086 3.35-3.086.308 0 .639 0 .974.096v3.228c-.288-.167-.857-.263-1.427-.263-2.59 0-2.59 3.255-2.59 5.023v4.522h-3.182V6.166zm20.5 12.319h-3.015V16.81h-.049c-.973 1.196-2.352 1.96-4.014 1.96-2.898 0-4.156-2.056-4.156-4.83V6.166h3.185v6.577c0 1.508.02 3.542 2.064 3.542 2.305 0 2.802-2.511 2.802-4.09v-6.03h3.183v12.32zm8.037-10.99h-2.467V6.193h2.467V5.3c0-2.58.096-5.184 3.232-5.184.48 0 1.127.073 1.414.24l-.096 1.327c-.312-.169-.767-.265-1.199-.265-2.058 0-1.842 2.243-1.842 3.714v1.06h2.754v1.303h-2.754v10.997h-1.51V7.495zm11.3 12.828c-.575 1.69-1.437 3.377-3.138 3.377-.55 0-1.125-.072-1.627-.193l.143-1.303c.287.097.575.193 1.124.193 1.294 0 1.726-1.084 2.205-2.678l.31-1.084-4.334-12.442h1.653l3.424 10.271-.024-.022h.047l3.52-10.25h1.582l-4.885 14.13zm20.804-1.831h-1.819l-3.328-10.635-3.377 10.635h-1.82l-3.928-12.3h1.652l3.21 10.634 3.448-10.634h1.82l3.233 10.634 3.425-10.634h1.508z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Cymru Fyw
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 bbZqWC"
            >
              Neidio i'r cynnwys
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             class="StyledNav-sc-158x7z5-5 dWucaK"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <div class="ScrollableWrapper-t4argr-0 UDeIc">
              <button type="button"
                      aria-expanded="false"
                      dir="ltr"
                      class="MenuButton-ukxuly-6 dGlJrg"
              >
                <svg focusable="false"
                     width="2.75rem"
                     height="2.75rem"
                     viewbox="0 0 44 44"
                     aria-hidden="true"
                     class="MenuIcon-sc-1nq0eki-0 gKIQph"
                >
                  <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                  </path>
                </svg>
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Adrannau
                </span>
              </button>
              <div dir="ltr"
                   class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
              >
                <ul role="list"
                    class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
                >
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Hafan
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/cylchgrawn"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Cylchgrawn
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/gwleidyddiaeth"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Gwleidyddiaeth
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/gogledd-orllewin"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Gog-Orll
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/gogledd-ddwyrain"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Gog-Ddwy
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/canolbarth"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Canolbarth
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/de-orllewin"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      De-Orll
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/cymrufyw/de-ddwyrain"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      De-Ddwy
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/news/wales"
                       class="StyledLink-sc-158x7z5-2 bIwJBN"
                    >
                      Wales News
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div height="0"
                 class="StyledDropdown-ukxuly-0 NlGZD"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Hafan
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/cylchgrawn"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Cylchgrawn
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/gwleidyddiaeth"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Gwleidyddiaeth
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/gogledd-orllewin"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Gog-Orll
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/gogledd-ddwyrain"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Gog-Ddwy
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/canolbarth"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Canolbarth
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/de-orllewin"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    De-Orll
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/cymrufyw/de-ddwyrain"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    De-Ddwy
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/news/wales"
                     class="StyledDropdownLink-ukxuly-4 dUsiqQ"
                  >
                    Wales News
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598292&amp;s2=100&amp;p=cymrufyw.articles.c06p32z9x2mo.page&amp;x1=[urn:bbc:optimo:c06p32z9x2mo]&amp;x2=[responsive]&amp;x3=[news-cymrufyw]&amp;x4=[cy]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Dyma+bennawd+SEO+yr+erthygl+brawf+yma]&amp;x11=[2019-07-13T12:47:29.359Z]&amp;x12=[2019-10-11T14:48:52.046Z]"
        >
      </noscript>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 kAojgD"
            >
              Dyma bennawd yr erthygl brawf yma
            </h1>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg 624w"
                         alt="Map o Ffrainc yn dangos Paris a Cognac"
                         src="https://ichef.bbci.co.uk/news/640/cpsdevpb/434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg"
                         width="624"
                         class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                    >
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                  <figcaption class="Caption-sc-16x70so-0 kzTJkj">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Disgrifiad o'r llun,
                    </span>
                    <p>
                      Mae’r llun prawf hwn, hawlfraint BBC, yn dangos map o Ffrainc. Mae’r llun o fewn y tri blwch cyntaf, gyda’r pennawd yma.
                    </p>
                  </figcaption>
                </div>
              </div>
            </figure>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-13"
                  class="StyledTimestamp-um718p-0 kSGFFg"
            >
              13 Gorffennaf 2019
            </time>
            <div>
              <time datetime="2019-10-11"
                    class="StyledTimestamp-um718p-0 kSGFFg"
              >
                Wedi ei ddiweddaru 11 Hydref 2019
              </time>
            </div>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 dSVJxu">
              Dyma flwch prawf, sy’n cynnwys dolen url i dudalen
              <a href="https://www.bbc.co.uk/weather"
                 class="InlineLink-hkwpaz-0 idscKS"
              >
                dywydd y BBC
              </a>
            </p>
          </div>
          <div class="GridItemConstrainedMediumNoMargin-sc-12lwanc-3 ijtfss">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="StyledVideoContainer-sc-13p1a4d-0 bpuDKK">
                <div class="StyledPlaceholder-sc-11nyhtu-0 dDNqOp">
                  <div class="GuidanceWrapper-sc-1wm6qsk-0 dSCKAT">
                    <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO guidance-message"
                            aria-hidden="true"
                    >
                      Contains strong language and adult humour.
                    </strong>
                    <noscript class="StyledNoScript-sc-1wm6qsk-2 fsOOOd">
                      <strong class="GuidanceMessage-sc-1wm6qsk-1 iYcpPO">
                        To play this content, please enable JavaScript, or try a different browser
                      </strong>
                    </noscript>
                  </div>
                  <button class="Button-sc-34e3rb-0 kwlSXK StyledPlayButton-sc-11nyhtu-1 bBTuxK">
                    <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                      Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
                    </span>
                    <div aria-hidden="true"
                         class="IconWrapper-sc-34e3rb-1 jGavfg"
                    >
                      <svg viewbox="0 0 32 32"
                           width="12px"
                           height="12px"
                           focusable="false"
                           aria-hidden="true"
                           class="MediaIcon-sc-10lpekz-0 VideoMediaIcon-sc-10lpekz-1 gUVBrE"
                      >
                        <polygon points="3,32 29,16 3,0">
                        </polygon>
                      </svg>
                    </div>
                    <time datetime="PT3M11S"
                          aria-hidden="true"
                          class="TimeDuration-sc-34e3rb-2 cZLyLe"
                    >
                      03:11
                    </time>
                  </button>
                  <img srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
                       alt
                       src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
                       class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  >
                </div>
              </div>
              <figcaption class="Caption-sc-16x70so-0 kzTJkj">
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Disgrifiad o'r fideo,
                </span>
                <p>
                  Dyma flwch fideo sy’n cynnwys fideo am forgrug
                </p>
              </figcaption>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <h2 id="Dyma-flwch-ar-gyfer-isbennawd"
                tabindex="-1"
                class="SubHeading-sc-1kh1qhu-1 nSlOl"
            >
              Dyma flwch ar gyfer is-bennawd
            </h2>
          </div>
          <div class="GridItemConstrainedLargeNoMargin-sc-12lwanc-5 tOkbK">
            <figure class="Figure-sc-6a3dhy-0 gJUCFc">
              <div class="NestedGridParentLarge-sc-12lwanc-10 hfLVVX">
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 fkKpIa">
                  <div class="ImagePlaceholder-sc-11u25v2-0 fNqlUz">
                    <div class="lazyload-placeholder">
                    </div>
                    <noscript>
                      <img srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg 800w"
                           alt="Pêl-droedwyr ar ôl y gêm"
                           src="https://ichef.bbci.co.uk/news/640/cpsdevpb/c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg"
                           width="2048"
                           class="StyledImg-sc-7vx2mr-0 dQLeqZ"
                      >
                    </noscript>
                    <p role="text"
                       class="Copyright-sc-11lgtw-0 hDvIfz"
                    >
                      <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                        Ffynhonnell y llun,
                      </span>
                      <span lang="en-GB">
                        Getty Images
                      </span>
                    </p>
                  </div>
                </div>
                <div class="NestedGridItemChildLarge-sc-12lwanc-9 ichKJL">
                </div>
              </div>
            </figure>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 dSVJxu">
              Mae’r erthygl brawf yma wedi ei chreu er mwyn cynnal profion ar y wefan drwyddi draw
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/cymrufyw"
               class="StyledLink-m3awbo-2 jvOoGC"
            >
              <svg height="24"
                   viewbox="0 0 199 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 bJeQfP"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M44.322 15.73c.006-1.994-1.316-3.509-3.423-4.092.567-.292 1.016-.65 1.35-1.086.443-.586.65-1.302.65-2.14a3.833 3.833 0 00-1.262-2.858c-.866-.783-2.175-1.292-3.958-1.292H32.74v15.796h5.8c2.068 0 3.517-.564 4.449-1.395a3.934 3.934 0 001.334-2.932zm-17.654 7.39h23.154V1.185H26.668V23.12z">
                  </path>
                  <path d="M41.44 15.41c0 .527-.16 1.049-.63 1.461-.461.41-1.26.722-2.586.722h-2.67V13.28h2.555c1.186 0 2.026.244 2.56.624.528.382.764.882.772 1.507m-2.165-5.16c.496-.36.74-.867.74-1.633 0-.528-.15-.978-.527-1.312-.372-.337-1.014-.576-2.05-.576h-1.886v4.086h1.297c1.123 0 1.925-.203 2.426-.564m-21.627 5.48c.006-1.995-1.31-3.51-3.423-4.093.573-.292 1.022-.65 1.348-1.086.444-.586.648-1.302.648-2.14a3.834 3.834 0 00-1.258-2.858c-.86-.783-2.167-1.292-3.952-1.292H6.075v15.796h5.792c2.065 0 3.514-.564 4.445-1.395a3.911 3.911 0 001.337-2.932zM0 23.12h23.145V1.185H.001V23.12z">
                  </path>
                  <path d="M12.604 10.25c.5-.36.738-.867.743-1.633 0-.528-.153-.978-.525-1.312-.38-.337-1.02-.576-2.05-.576H8.885v4.086h1.297c1.117 0 1.925-.203 2.421-.564m1.392 3.652c-.527-.38-1.373-.624-2.562-.624H8.886v4.314h2.665c1.328 0 2.13-.311 2.593-.722.461-.412.623-.934.623-1.46-.006-.626-.24-1.126-.771-1.508m57.894 1.928l-.373.228c-1.782 1.1-3.736 1.693-5.506 1.693-3.79-.014-6.292-2.273-6.304-5.57.012-3.221 2.62-5.603 6.2-5.612 1.838.002 3.493.479 5.458 1.563l.36.2V5.394l-.156-.059c-2.223-.883-3.942-1.277-5.636-1.277-2.617 0-4.903.873-6.522 2.353-1.616 1.485-2.581 3.574-2.581 5.976 0 1.672.68 3.635 2.157 5.189 1.464 1.556 3.713 2.688 6.806 2.688h.015c2.564 0 4.338-.573 5.942-1.372l.14-.065v-2.996zm-18.553 7.29h23.151V1.184h-23.15V23.12zM96.733 8.82c-.57-.263-1.186-.454-2.159-.454-1.974 0-3.233 1.58-3.233 3.9 0 2.273 1.07 4.02 3.301 4.02.905 0 1.902-.337 2.451-.576l.141 2.654c-.926.287-1.877.407-3.185.407-4.013 0-6.032-2.75-6.032-6.505 0-3.565 2.09-6.387 5.914-6.387 1.284 0 2.208.144 3.088.406l-.286 2.535zm8.17 6.34h.048l2.947-8.994h3.232l-4.587 12.223c-1.02 2.727-1.759 5.405-5.084 5.405-.76 0-1.518-.12-2.257-.335l.214-2.367c.405.143.857.215 1.642.215 1.28 0 2.067-.884 2.067-2.2l-4.683-12.94h3.517l2.945 8.992zm8.078-8.994h2.969V7.89h.047c.998-1.507 2.447-2.01 3.636-2.01 1.708 0 2.92.646 3.609 2.176.736-1.482 2.329-2.176 3.823-2.176 3.019 0 3.872 2.082 3.872 4.831v7.775h-3.181v-7.342c0-1.15 0-2.776-1.831-2.776-2.113 0-2.372 2.536-2.372 4.137v5.981h-3.184v-7.342c0-1.15 0-2.776-1.829-2.776-2.116 0-2.376 2.536-2.376 4.137v5.981h-3.183V6.166zm20.528 0h2.828v2.799h.047c.142-1.149 1.448-3.086 3.35-3.086.308 0 .639 0 .974.096v3.228c-.288-.167-.857-.263-1.427-.263-2.59 0-2.59 3.255-2.59 5.023v4.522h-3.182V6.166zm20.5 12.319h-3.015V16.81h-.049c-.973 1.196-2.352 1.96-4.014 1.96-2.898 0-4.156-2.056-4.156-4.83V6.166h3.185v6.577c0 1.508.02 3.542 2.064 3.542 2.305 0 2.802-2.511 2.802-4.09v-6.03h3.183v12.32zm8.037-10.99h-2.467V6.193h2.467V5.3c0-2.58.096-5.184 3.232-5.184.48 0 1.127.073 1.414.24l-.096 1.327c-.312-.169-.767-.265-1.199-.265-2.058 0-1.842 2.243-1.842 3.714v1.06h2.754v1.303h-2.754v10.997h-1.51V7.495zm11.3 12.828c-.575 1.69-1.437 3.377-3.138 3.377-.55 0-1.125-.072-1.627-.193l.143-1.303c.287.097.575.193 1.124.193 1.294 0 1.726-1.084 2.205-2.678l.31-1.084-4.334-12.442h1.653l3.424 10.271-.024-.022h.047l3.52-10.25h1.582l-4.885 14.13zm20.804-1.831h-1.819l-3.328-10.635-3.377 10.635h-1.82l-3.928-12.3h1.652l3.21 10.634 3.448-10.634h1.82l3.233 10.634 3.425-10.634h1.508z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                Cymru Fyw
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 iGoLNb">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 bmlrLC"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/news/help-41670342"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Pam y gallwch ymddiried yn BBC Cymru Fyw
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/terms/cy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Telerau Defnyddio
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/privacy/cy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Polisi Preifatrwydd
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/cy/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cwcis
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/contact/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Cysylltwch â'r BBC
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. Nid yw'r BBC yn gyfrifol am gynnwys safleoedd allanol.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Sut ry'n ni'n defnyddio dolenni allanol.
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"id":"mock-id","locators":{"optimoUrn":"urn:bbc:optimo:asset:c06p32z9x2mo"},"type":"article","createdBy":"Cymrufyw","language":"cy","lastUpdated":1571059200691,"firstPublished":1563022049359,"lastPublished":1570805332046,"options":{},"analyticsLabels":{},"passport":{"language":"cy","home":"http://www.bbc.co.uk/ontologies/passport/home/CymruFyw"},"tags":{},"version":"v1.1.2","blockTypes":["headline","text","paragraph","fragment","image","caption","altText","rawImage","urlLink","video","subheadline"]},"content":{"model":{"blocks":[{"type":"headline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Dyma bennawd yr erthygl brawf yma","blocks":[{"type":"fragment","model":{"text":"Dyma bennawd yr erthygl brawf yma","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"id":"mock-id","position":[1]},{"type":"image","model":{"blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Mae’r llun prawf hwn, hawlfraint BBC, yn dangos map o Ffrainc. Mae’r llun o fewn y tri blwch cyntaf, gyda’r pennawd yma.","blocks":[{"type":"fragment","model":{"text":"Mae’r llun prawf hwn, hawlfraint BBC, yn dangos map o Ffrainc. Mae’r llun o fewn y tri blwch cyntaf, gyda’r pennawd yma.","attributes":[]},"id":"mock-id","position":[2,1,1,1,1]}]},"id":"mock-id","position":[2,1,1,1]}]},"id":"mock-id","position":[2,1,1]}]},"id":"mock-id","position":[2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Map o Ffrainc yn dangos Paris a Cognac","blocks":[{"type":"fragment","model":{"text":"Map o Ffrainc yn dangos Paris a Cognac","attributes":[]},"id":"mock-id","position":[2,2,1,1,1]}]},"id":"mock-id","position":[2,2,1,1]}]},"id":"mock-id","position":[2,2,1]}]},"id":"mock-id","position":[2,2]},{"type":"rawImage","model":{"width":624,"height":351,"locator":"434d/test/2dd9efb0-ec35-11e9-88d6-81aa2ccc6d4c.jpg","originCode":"cpsdevpb","copyrightHolder":"BBC"},"id":"mock-id","position":[2,3]}]},"id":"mock-id","position":[2]},{"type":"timestamp","model":{"firstPublished":1563022049359,"lastPublished":1570805332046},"id":"mock-id","position":[3]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Dyma flwch prawf, sy’n cynnwys dolen url i dudalen dywydd y BBC","blocks":[{"type":"fragment","model":{"text":"Dyma flwch prawf, sy’n cynnwys dolen url i dudalen ","attributes":[]},"id":"mock-id","position":[4,1,1]},{"type":"urlLink","model":{"text":"dywydd y BBC","blocks":[{"type":"fragment","model":{"text":"dywydd y BBC","attributes":[]},"id":"mock-id","position":[4,1,2,1]}],"locator":"https://www.bbc.co.uk/weather","isExternal":false},"id":"mock-id","position":[4,1,2]}]},"id":"mock-id","position":[4,1]}]},"id":"mock-id","position":[4]},{"type":"video","model":{"locator":"urn:bbc:pips:pid:p01k6msm","blocks":[{"type":"caption","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Dyma flwch fideo sy’n cynnwys fideo am forgrug","blocks":[{"type":"fragment","model":{"text":"Dyma flwch fideo sy’n cynnwys fideo am forgrug","attributes":[]},"id":"mock-id","position":[5,1,1,1,1]}]},"id":"mock-id","position":[5,1,1,1]}]},"id":"mock-id","position":[5,1,1]}]},"id":"mock-id","position":[5,1]},{"type":"aresMedia","model":{"blocks":[{"blockId":"urn:bbc:ares::clip:p01k6msm","type":"aresMediaMetadata","model":{"id":"mock-id","subType":"clip","format":"audio_video","title":"Five things ants can teach us about management","synopses":{"short":"They may be tiny, but us humans could learn a thing or two from ants."},"imageUrl":"ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg","imageCopyright":"BBC","embedding":true,"advertising":true,"versions":[{"versionId":"p01k6msp","types":["Original"],"duration":191,"durationISO8601":"PT3M11S","warnings":{"short":"Contains strong language and adult humour.","long":"Contains strong language and adult humour."},"availableTerritories":{"uk":true,"nonUk":true},"availableFrom":1540218932000}],"syndication":{"destinations":[]}},"id":"mock-id","position":[5,2,1]},{"type":"image","model":{"blocks":[{"type":"rawImage","model":{"width":1920,"height":1080,"locator":"ichef.test.bbci.co.uk/images/ic/$widthxn/p01k6mtv.jpg","originCode":"mpv","copyrightHolder":"BBC"},"id":"mock-id","position":[5,2,2,1]},{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ants","blocks":[{"type":"fragment","model":{"text":"Ants","attributes":[]},"id":"mock-id","position":[5,2,2,2,1,1,1]}]},"id":"mock-id","position":[5,2,2,2,1,1]}]},"id":"mock-id","position":[5,2,2,2,1]}]},"id":"mock-id","position":[5,2,2,2]}]},"id":"mock-id","position":[5,2,2]}]},"id":"mock-id","position":[5,2]}]},"id":"mock-id","position":[5]},{"type":"subheadline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Dyma flwch ar gyfer is-bennawd","blocks":[{"type":"fragment","model":{"text":"Dyma flwch ar gyfer is-bennawd","attributes":[]},"id":"mock-id","position":[6,1,1,1]}]},"id":"mock-id","position":[6,1,1]}]},"id":"mock-id","position":[6,1]}]},"id":"mock-id","position":[6]},{"type":"image","model":{"blocks":[{"type":"altText","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Pêl-droedwyr ar ôl y gêm","blocks":[{"type":"fragment","model":{"text":"Pêl-droedwyr ar ôl y gêm","attributes":[]},"id":"mock-id","position":[7,1,1,1,1]}]},"id":"mock-id","position":[7,1,1,1]}]},"id":"mock-id","position":[7,1,1]}]},"id":"mock-id","position":[7,1]},{"type":"rawImage","model":{"width":2048,"height":1152,"locator":"c761/test/bc387830-ec35-11e9-88d6-81aa2ccc6d4c.jpg","originCode":"cpsdevpb","copyrightHolder":"Getty Images"},"id":"mock-id","position":[7,2]}]},"id":"mock-id","position":[7]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Mae’r erthygl brawf yma wedi ei chreu er mwyn cynnal profion ar y wefan drwyddi draw","blocks":[{"type":"fragment","model":{"text":"Mae’r erthygl brawf yma wedi ei chreu er mwyn cynnal profion ar y wefan drwyddi draw","attributes":[]},"id":"mock-id","position":[8,1,1]}]},"id":"mock-id","position":[8,1]}]},"id":"mock-id","position":[8]}]}},"promo":{"headlines":{"seoHeadline":"Dyma bennawd SEO yr erthygl brawf yma"},"locators":{"optimoUrn":"urn:bbc:optimo:asset:c06p32z9x2mo"},"summary":"","timestamp":1570805332046,"id":"mock-id","type":"cps"},"relatedContent":{"site":{"subType":"site","name":"Cymrufyw","uri":"/cymrufyw","type":"simple"},"groups":[]}},"path":"/cymrufyw/erthyglau/c06p32z9x2mo","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [8]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="cymrufyw"
            src="http://localhost:7080/static/js/cymrufyw-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
